# TourMateApp

./: .gitignore  README.md
entrega/: README.txt
entrega/src/: main.cpp
entrega/src/application/: Application.cpp
example/: CMakeLists.txt  main.cpp
example/graph/: Graph.h
example/rapidxml/: rapidxml_ext.h
src/: Application.cpp  Application.h  CMakeLists.txt  User.cpp  User.h  main.cpp
src/application/: Application.cpp  Application.h  Menu.cpp  RouteMaker.cpp  RouteMaker.h  User.cpp  User.h  exceptions.h
src/application/containers/: GraphClasses.cpp  GraphClasses.h  MapContainer.cpp  MapContainer.h  OSMapContainer.cpp  POI.cpp  POI.h  Route.h  SimpleMapContainer.cpp  User.cpp  User.h
src/application/graph/: Graph.h  GraphEdgeInfo.h  viewGraph.h
src/application/graph/algorithms/: bfs.h  dfs.h  dijkstra.h  findArticulationPoints.h  isDag.h  makeRoute.h  maxNewChildren.h  scc.h  topsort.h  viewGraph.h
src/application/input/: Converter.cpp  Converter.h  UserInput.cpp  UserInput.h
src/application/logic/: GraphAnalyzer.cpp  GraphAnalyzer.h  OSMRouteMaker.cpp  PerformanceTests.cpp  PerformanceTests.h  RouteMaker.cpp  RouteMaker.h  SimpleRouteMaker.cpp  StringMatcher.cpp  StringMatcher.h
src/application/ui/: Drawer.h  GraphViewer.cpp  GraphViewer.h  GraphViewerCustom.cpp  GraphViewerCustom.h  Menu.cpp  Menu.h
src/graph/: Graph.h  GraphClasses.cpp  GraphClasses.h  POI.h  Position.h  RoadInterceptionFromTxt.h  viewGraph.h
src/graph/algorithms/: dijkstra.h
src/input/: Converter.cpp  Converter.h  UserInput.cpp  UserInput.h  input.cpp  input.h
src/maps/: zona_feup_hsj.osm
src/maps/gridGraph/16x16/: tags.txt
src/maps/gridGraph/4x4/: tags.txt
src/maps/gridGraph/8x8/: tags.txt
src/maps/simple/espinho/: full_tags.txt  strong_tags.txt
src/maps/simple/penafiel/: full_tags.txt  strong_tags.txt
src/maps/simple/porto/: full_tags.txt  strong_tags.txt
(+26 files in other folders)
